--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -73,7 +73,7 @@
         </div>
       </div>      <div class="boton-container">
         <button class="btn-alquilar" (click)="mostrarFormularioReserva()">Alquilar</button>
-        <button class="btn-resena" (click)="mostrarFormularioResena()">Reseñar</button>
+        <button *ngIf="estaAutenticado" class="btn-review" (click)="mostrarFormularioReview()">Escribir Reseña</button>
         <button *ngIf="esAdmin" class="btn-eliminar" (click)="eliminarVehiculo()">Eliminar</button>
       </div>      <app-formulario-alquilar 
         [tipoVehiculo]="tipoVehiculo" 
@@ -81,13 +81,13 @@
         *ngIf="showMostrarReserva" 
         (cerrarModal)="showMostrarReserva = false">
       </app-formulario-alquilar>
-      <app-formulario-resena 
-        [tipoVehiculo]="tipoVehiculo" 
-        [vehiculo]="vehiculo" 
-        *ngIf="showMostrarResena" 
-        (cerrarModal)="showMostrarResena = false">
-      </app-formulario-resena>
-      <app-login
+      <app-review-modal
+        [vehiculo]="vehiculo"
+        *ngIf="showReviewModal"
+        (closeModal)="cerrarReviewModal()"
+        (reviewSubmitted)="onReviewSubmitted()">
+      </app-review-modal>
+      <app-login 
         *ngIf="showLoginModal"
         (closeModal)="cerrarLoginModal()"
         (loginSuccess)="onLoginSuccess()"
