--- a/src/app/vistas/especificaciones/especificaciones.component.html
+++ b/src/app/vistas/especificaciones/especificaciones.component.html
@@ -1,9 +1,13 @@
 <app-navbar></app-navbar>
 <app-tipo-vehiculo-banner-first
   [tipoVehiculo]="tipoVehiculoSeleccionado"
-  [vehiculo]="vehiculoSeleccionado">
+  [vehiculo]="vehiculoSeleccionado"
+  (reviewAdded)="refreshReviews()">
 </app-tipo-vehiculo-banner-first>
-<app-tipo-vehiculo-resennas></app-tipo-vehiculo-resennas>
+<app-tipo-vehiculo-resennas 
+  #reviewsComponent
+  [vehiculo]="vehiculoSeleccionado">
+</app-tipo-vehiculo-resennas>
 <app-preview-catalogo></app-preview-catalogo>
 <app-marcas-block></app-marcas-block>
 <app-footer></app-footer>
