--- a/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.css
+++ b/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.css
@@ -170,7 +170,7 @@
   padding: 0;
 }
 
-.form-input:focus + label,
+.form-input:focus + label, 
 .form-input:not(:placeholder-shown) + label {
   top: 6px;
   left: 15px;
@@ -275,23 +275,14 @@
   color: white;
 }
 
-.contact-info-panel h3 {
-  font-size: 1.8rem;
-  margin-bottom: 1.5rem;
-  color: #ff9800;
-  text-align: center;
-}
-
 /* Estilos para todos los h3 dentro del panel */
-.contact-info-panel h3,
-.encuentranos-title {
+.contact-info-panel h3, .encuentranos-title {
   font-family: 'Work Sans', sans-serif;
   font-size: 1.8rem;
   font-weight: 700;
   margin-bottom: 1.5rem;
   color: #ff9800;
   text-align: center;
-  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* Estilos específicos para el título "Encuéntranos" si necesitas ajustes adicionales */
@@ -301,7 +292,7 @@
 }
 
 .encuentranos-title::after {
-  content: "";
+
   display: block;
   width: 50px;
   height: 3px;
