--- a/src/app/shared/components/Contacto/dato-contacto/dato-contacto.component.html
+++ b/src/app/shared/components/Contacto/dato-contacto/dato-contacto.component.html
@@ -2,7 +2,7 @@
     <div class="row text-center text-md-start py-4">
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
         <i class="bi bi-geo-alt icono-direccion"></i>
-        <div>
+        <div class="dato">
           <div class="label">Dirección</div>
           <div class="info"><b>C/ Albarracín 25 28037, Madrid, España</b></div>
         </div>
@@ -10,7 +10,7 @@
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
         <i class="bi bi-envelope"></i>
-        <div>
+        <div class="dato">
           <div class="label">Email</div>
           <div class="info"><b>karhub&#64;gmail.com</b></div>
         </div>
@@ -18,7 +18,7 @@
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
         <i class="bi bi-telephone"></i>
-        <div>
+        <div class="dato">
           <div class="label">Teléfono</div>
           <div class="info"><b>+34 923456789</b></div>
         </div>
@@ -26,7 +26,7 @@
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
        <i class="bi bi-clock"></i>
-        <div>
+        <div class="dato">
           <div class="label">Horario</div>
           <div class="info"><b>Sab-Lun: 10am - 10pm</b></div>
         </div>
