--- a/src/app/shared/components/tipo-vehiculo-resennas/tipo-vehiculo-resennas.component.css
+++ b/src/app/shared/components/tipo-vehiculo-resennas/tipo-vehiculo-resennas.component.css
@@ -107,6 +107,14 @@
     height: 24px;
 }
 
+.carousel-arrow-left {
+    margin-right: 1rem;
+}
+
+.carousel-arrow-right {
+    margin-left: 1rem;
+}
+
 /* PAGINATION */
 .carousel-pagination {
     display: flex;
