--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -65,7 +65,8 @@
           <span>Etiqueta</span>
           <p>{{ vehiculo.etiqueta }}</p>
         </div>
-      </div>      <div class="boton-container">
+      </div>      
+      <div class="boton-container">
         <button class="btn-alquilar" (click)="mostrarFormularioReserva()">Alquilar</button>
         <button *ngIf="estaAutenticado" class="btn-review" (click)="mostrarFormularioReview()">Escribir Reseña</button>
         <button *ngIf="esAdmin" class="btn-eliminar" (click)="eliminarVehiculo()">Eliminar</button>
