--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.css
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.css
@@ -18,7 +18,6 @@
 
 
 .left-panel {
-
   margin-top: auto;
   flex: 1.2;
   display: flex;
@@ -195,6 +194,7 @@
   gap: 1rem;
   margin-top: auto;
   flex-wrap: wrap;
+  margin-top: 25px;
 }
 
 /* Color dentro de spec-card */
