--- a/src/app/shared/components/Header_Footer/navbar/navbar.component.css
+++ b/src/app/shared/components/Header_Footer/navbar/navbar.component.css
@@ -177,9 +177,13 @@ body {
     min-height: unset;
   }
   .center-nav {
-    justify-content: flex-start;
+    justify-content: center;
     margin-top: 0.375rem;
     margin-bottom: 0.375rem;
+  }
+  .center-nav .navbar-nav {
+    justify-content: center;
+    width: 100%;
   }
   .navbar-nav .nav-link {
     padding: 0.375rem 0.75rem;
