--- a/src/app/shared/components/Home/dato-home/dato-home.component.css
+++ b/src/app/shared/components/Home/dato-home/dato-home.component.css
@@ -76,3 +76,23 @@ div ul li p {
     transform: scale(1);
   }
 }
+
+@media (max-width: 768px) {
+  .static-title {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  div ul li h5 {
+    font-size: 1rem;
+  }
+  div ul li p {
+    font-size: 0.9rem;
+  }
+  .step-number {
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    margin-right: 6px;
+    font-size: 0.95rem;
+  }
+}
