--- a/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.html
+++ b/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.html
@@ -1,9 +1,9 @@
 <div class="container my-5 py-5 titulo-seccion">
   <h1><b>Contacto</b><br/></h1>
   <div class="breadcrumb">
-    <a routerLink="/"><b>Inicio</b></a>
+    <a routerLink="/"><b>INICIO</b></a>
     <span>/</span>
-    <span class="actual">Contáctanos</span>
+    <span class="actual">CONTÁCTANOS</span>
   </div>
 </div>
 
@@ -64,7 +64,7 @@
 
         <div class="form-group button-group">
           <div class="button-container">
-            <button type="submit" class="submit-btn">Enviar</button>
+            <button type="submit" class="submit-btn" (click)="enviarContacto()">Enviar</button>
           </div>
         </div>
       </form>
