--- a/src/app/shared/components/Home/preview-catalogo/preview-catalogo.component.html
+++ b/src/app/shared/components/Home/preview-catalogo/preview-catalogo.component.html
@@ -4,7 +4,7 @@
   <div class="contenedor">
     <header class="cabecera">
       <h1>Elige el vehículo que más te convenga</h1>
-      <a [routerLink]="['/catalogo']" class="ver-todos">Ver todos <i class="fas fa-arrow-right"></i></a>
+      <a [routerLink]="['/catalogo']" class="ver-todos">Catalogo<i class="fas fa-arrow-right"></i></a>
     </header>
 
     <div class="cuadricula-vehiculos">
