--- a/src/app/shared/components/Informacion/video-nosotros/video-nosotros.component.css
+++ b/src/app/shared/components/Informacion/video-nosotros/video-nosotros.component.css
@@ -54,6 +54,7 @@ body {
   letter-spacing: 2px;
   text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   animation: fadeInDown 0.8s ease-out;
+  color: white
 }
 
 .breadcrumb {
@@ -66,7 +67,7 @@ body {
 }
 
 .breadcrumb a {
-  color: #f59d5a;
+  color: white;
   text-decoration: none;
   transition: color 0.3s ease;
   padding: 0.5rem;
@@ -77,14 +78,14 @@ body {
 }
 
 .breadcrumb .actual {
-  color: var(--naranja-oscuro);
   font-weight: 600;
   padding: 0.5rem;
-  animation: pulse 2s infinite;
+  color: #f58b5a;
 }
 
 .breadcrumb span {
   margin: 0 10px;
+  color: white;
 }
 
 /* Animaciones */
