--- a/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.html
+++ b/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.html
@@ -64,7 +64,7 @@
 
         <div class="form-group button-group">
           <div class="button-container">
-            <button type="submit" class="submit-btn" (click)="enviarContacto()">Enviar</button>
+            <button type="submit" class="submit-btn">Enviar</button>
           </div>
         </div>
       </form>
