--- a/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.css
+++ b/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.css
@@ -174,7 +174,7 @@
 .form-input:not(:placeholder-shown) + label {
   top: 6px;
   left: 15px;
-  color:black;
+  color:#f58b5a;
 }
 
 /* Contadores de caracteres */
