--- a/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
+++ b/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
@@ -45,8 +45,7 @@
         </div>
         <div class="feature-item">
           <img src="assets/img/icono-vehiculo/color.png" alt="Color" class="feature-icon">
-          <span>{{ vehiculo.color ? (vehiculo.color | titlecase) : 'No disponible' }}</span>
-
+          <span>{{ vehiculo.color || 'No disponible' }}</span>
         </div>
         <div class="feature-item">
           <img src="assets/img/icono-vehiculo/ruta.png" alt="Ubicación" class="feature-icon">
