--- a/src/app/shared/components/Home/preview-catalogo/preview-catalogo.component.html
+++ b/src/app/shared/components/Home/preview-catalogo/preview-catalogo.component.html
@@ -24,6 +24,11 @@
               <span class="por-dia">por día</span>
             </div>
           </div>
+          <div class="caracteristicas-vehiculo">
+          <div class="caracteristica">
+            <i [ngClass]="vehiculo.transmision === 'MANUAL' ? 'fas fa-gear' : 'fas fa-car-side'"></i>
+            <span>{{ vehiculo.transmision | titlecase }}</span>
+          </div>
           <div class="caracteristica">
             <i [ngClass]="{
               'bi bi-fuel-pump': vehiculo.combustible === 'GASOLINA' || vehiculo.combustible === 'GLP',
@@ -32,6 +37,11 @@
             }"></i>
             <span>{{ vehiculo.combustible | titlecase }}</span>
           </div>
+          <div class="caracteristica">
+            <i class="fas fa-wind"></i>
+            <span>{{ vehiculo.aireAcondicionado ? 'A/A' : 'Sin A/A' }}</span>
+          </div>
+        </div>
           <button class="boton-detalles" (click)="verDetalles(vehiculo)">Ver detalles</button>
 
         </div>
